--- a/notebooks/lab-1.ipynb
+++ b/notebooks/lab-1.ipynb
@@ -20,15 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2dbfdbda",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ee\n",
     "# Authenticate and initialize GEE\n",
     "# TODO: Use the Earth Engine library to authenticate and initialize your session\n",
-    "# ee.Authenticate()\n",
-    "# ee.Initialize(project='your-project-name')\n"
+    "ee.Authenticate()\n",
+    "ee.Initialize(project='forevery32')\n"
    ]
   },
   {
@@ -43,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "75f06d59",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define AOI\n",
     "# TODO: Replace with your coordinates\n",
-    "aoi = ee.Geometry.Point([19.9383, 50.0614])  # Example: Krakow\n",
+    "aoi = ee.Geometry.Point([21.411874, 50.055315])  # Example: Krakow\n",
     "# or\n",
     "# aoi = ee.Geometry.Rectangle([west, south, east, north])"
    ]
@@ -66,16 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "5e08ded8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# Retrieve Sentinel-2 Data\n",
     "# TODO: Adjust the date range and retrieve the least cloudy Sentinel-2 image\n",
-    "# sentinel2 = ee.ImageCollection('COPERNICUS/S2_HARMONIZED')\n",
-    "# image = ...\n",
-    "# metadata = image.getInfo()\n"
+    "sentinel2 = ee.ImageCollection('COPERNICUS/S2_HARMONIZED') \\\n",
+    "    .filterDate('2025-02-01', '2025-03-01') \\\n",
+    "    .filterBounds(aoi) \\\n",
+    "    .sort('CLOUDY_PIXEL_PERCENTAGE')\n",
+    "image = sentinel2.first()\n",
+    "metadata = image.getInfo()\n"
    ]
   },
   {
@@ -89,13 +94,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "14d34b82",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Cloud coverage assessment': 4.603810206336, ' Mean solar zenith angle': 61.4723535639563, 'Mean solar azimuth angle:': 163.338045320742, 'Processing baseline:': '05.11'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract metadata\n",
-    "# TODO: Retrieve and display image metadata\n"
+    "# TODO: Retrieve and display image metadata\n",
+    "metadata = {\n",
+    "    \"Cloud coverage assessment\" : image.get('CLOUD_COVERAGE_ASSESSMENT').getInfo(),\n",
+    "    \" Mean solar zenith angle\" : image.get('MEAN_SOLAR_ZENITH_ANGLE').getInfo(),\n",
+    "    \"Mean solar azimuth angle:\" : image.get('MEAN_SOLAR_AZIMUTH_ANGLE').getInfo(),\n",
+    "    \"Processing baseline:\" : image.get('PROCESSING_BASELINE').getInfo()\n",
+    "}\n",
+    "print(metadata)\n"
    ]
   },
   {
@@ -112,15 +132,35 @@
    "execution_count": null,
    "id": "ffe9a4f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Map' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m true_color_params \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbands\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB4\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB3\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB2\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmin\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmax\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m3000\u001b[39m}\n\u001b[1;32m      6\u001b[0m false_color_params \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbands\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB8\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB4\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB3\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmin\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m0\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmax\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m5000\u001b[39m}\n\u001b[0;32m----> 7\u001b[0m \u001b[43mMap\u001b[49m\u001b[38;5;241m.\u001b[39maddLayer(image, true_color_params, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTrue color\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m Map\u001b[38;5;241m.\u001b[39maddLayer(image, false_color_params, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFalse color\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m Map\u001b[38;5;241m.\u001b[39mcenterObject(image, zoom\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Map' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "import geemap\n",
     "# Visualization\n",
     "# TODO: Create visualization layers using true color and false color compositions\n",
     "# Example parameters provided below:\n",
     "true_color_params = {'bands': ['B4', 'B3', 'B2'], 'min': 0, 'max': 3000}\n",
     "false_color_params = {'bands': ['B8', 'B4', 'B3'], 'min': 0, 'max': 5000}\n",
+    "Map=geemap.Map()\n",
+    "Map.addLayer(image, true_color_params, \"True color\")\n",
+    "Map.addLayer(image, false_color_params, \"False color\")\n",
+    "Map.centerObject(image, zoom=10)\n",
+    "# TODO: Add these layers to an interactive map\n",
     "\n",
-    "# TODO: Add these layers to an interactive map\n"
+    "Map\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -135,7 +175,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gee",
+   "display_name": "eo_lab",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
