--- a/notebooks/lab-3.ipynb
+++ b/notebooks/lab-3.ipynb
@@ -107,42 +107,12 @@
     "from geoapps.lab03.cloud_mosaic import create_cloud_free_mosaic\n",
     "\n",
     "import ee\n",
-    "ee.Initialize(project='your-ee-project-id')\n",
+    "ee.Initialize(project='forevery32')\n",
     "\n",
     "aoi = ee.Geometry.Rectangle([19.8, 50.0, 20.0, 50.2])\n",
     "mosaic = create_cloud_free_mosaic(aoi, '2023-06-01', '2023-07-01')\n",
     "print(mosaic.getInfo())\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "63204878",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'geoapps'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#nwm jak inaczej to zrobłem z s2cloudless\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mgeoapps\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlab03\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcloud_mosaic\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m display_cloud_map, display_cloud_free_mosaic\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Wyświetlenie mapy z maską chmur\u001b[39;00m\n\u001b[1;32m      5\u001b[0m display_cloud_map()\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'geoapps'"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "#nwm jak inaczej to zrobłem z s2cloudless\n",
-    "from geoapps.lab03.cloud_mosaic import display_cloud_map, display_cloud_free_mosaic\n",
-    "\n",
-    "# Wyświetlenie mapy z maską chmur\n",
-    "display_cloud_map()\n",
-    "\n",
-    "# Wyświetlenie mozaiki bezchmurowej\n",
-    "display_cloud_free_mosaic()"
    ]
   },
   {
